Slight whitespace change.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.56 2009/10/30 14:11:25 ith Exp $
+% $Id: dbi.tex,v 1.57 2009/10/31 11:18:08 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.56 2009/10/30 14:11:25 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.57 2009/10/31 11:18:08 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1057,7 +1057,8 @@ Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}.
 % \cite{RenauxPetel:2009sj}. This opens the possibility of a distinct
 % observational signature for this type of model.
 % 
-Other multi-field models introduce copies of the single DBI action with either
+Other multi-field models introduce multiple copies of the single DBI action with
+either
 the same or different sound speeds \cite{Cai:2008if, Cai:2009hw},  use
 different throat geometries \cite{Gmeiner:2007uw},
 or apply the curvaton scenario \cite{Lyth:2001nq} to the DBI case
