Changed eqn to align.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.55 2009/10/29 12:36:56 ith Exp $
+% $Id: dbi-intro.tex,v 1.56 2009/10/31 14:09:04 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.55 2009/10/29 12:36:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.56 2009/10/31 14:09:04 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -553,14 +553,14 @@ $\varphi \equiv \sqrt{T_3} \rho$, where $T_3$
 is the brane tension defined in \eq{eq:branetensiondefn-dbiintro}. The action is
 then given by \cite{brane6}
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:DBIaction-dbiintro}
-S=\int  \d^4x \sqrt{|g|} \left[ \frac{\Mpl^2}{2} R 
-+ P (\varphi , X) \right] \\
+S &=\int  \d^4x \sqrt{|g|} \left[ \frac{\Mpl^2}{2} R 
++ P (\varphi , X) \right] \,,\\
 \label{eq:Pdefn-dbiintro}
-P( \varphi ,X) = - T (\varphi)  \sqrt{1 - 2T^{-1} (\varphi ) X}
+P( \varphi ,X) &= - T (\varphi)  \sqrt{1 - 2T^{-1} (\varphi ) X}
 +T (\varphi)  -V(\varphi)  \,,
-\end{eqnarray}
+\end{align}
 % 
 where $R$ is the Ricci curvature scalar and $T(\varphi ) = T_3 h^4 (\varphi )$
 defines the warped brane tension. As in Section \ref{sec:noncanoninfl} we refer
