Revised review section.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.57 2009/10/31 11:18:08 ith Exp $
+% $Id: dbi.tex,v 1.58 2009/10/31 14:09:13 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.57 2009/10/31 11:18:08 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.58 2009/10/31 14:09:13 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1030,13 +1030,26 @@ standard DBI model is not replicated.
  
 
 
-Changing the physical setting can also allow larger field ranges. Extremely large
-field ranges can be achieved by considering
-D4-branes in compactified manifolds containing monodromies. These large field
-variations lead to possibly observable tensor modes
+Changing the physical setting can also allow larger field ranges, for example by
+considering D4-branes in compactified manifolds containing monodromies. 
+The large field
+variations in this single brane, single field model lead to possibly observable
+tensor modes
 \cite{Silverstein:2008sg}. Although formulated in Type IIA string theory, the
 monodromy model has a simple inflationary interpretation as a large field, slow roll
 model with the potential $V(\vp)=\vp^{2/3}$. 
+
+The tensor-scalar ratio and other observable quantities are
+significantly altered if the throat geometry changes for the
+standard D3-brane model \cite{Gmeiner:2007uw}. In
+\Rref{Butti:2004pk} a one parameter family of solutions is given, which interpolates
+between the
+Klebanov-Strassler (KS) \cite{ks} and Maldacena-Nu\~{n}ez
+\cite{Maldacena:2000yy} throats. As the throat geometry moves away from KS, more
+non-Gaussianity is produced but the tensor-scalar ratio is reduced.
+The choice of throat geometry, therefore, could have an affect on the bounds on $r$
+and must be considered when models are compared.
+
 
 
 The next set of models that can be considered are the single brane, multi field
@@ -1048,7 +1061,12 @@ Refs.~\cite{spinflation} and \cite{Huang:2007hh}. Increasing the degrees of
 freedom in this way introduces the possibility of entropy mode production. There are
 changes in the predictions for the amount and type of non-Gaussianity produced
 and the constraints on $r$ can be eased \cite{Arroja:2008yy, Langlois:2009ej,
-Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}. 
+Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv, RenauxPetel:2009sj}.
+%
+The bounds on $r$ could also be affected if a non-negligible part of the
+curvature perturbations was produced by a curvaton field \cite{Lyth:2001nq}.
+Curvaton fields arise generically for scenarios containing warped throats,
+particularly for propagation near the tip \cite{Li:2008fm, Kobayashi:2009cm}. 
 % 
 % Differences in
 % the bi- and tri-spectra could enable multi-field DBI models to be distinguished
@@ -1057,18 +1075,23 @@ Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}.
 % \cite{RenauxPetel:2009sj}. This opens the possibility of a distinct
 % observational signature for this type of model.
 % 
-Other multi-field models introduce multiple copies of the single DBI action with
-either
-the same or different sound speeds \cite{Cai:2008if, Cai:2009hw},  use
-different throat geometries \cite{Gmeiner:2007uw},
-or apply the curvaton scenario \cite{Lyth:2001nq} to the DBI case
-\cite{Li:2008fm, Kobayashi:2009cm}.
+
+Investigations have also been made into models with multiple branes, each of which
+has a single dynamical field. In Refs.~\cite{Cai:2008if} and \cite{Cai:2009hw}, no
+interactions between branes were considered, and the branes could conceivably be
+propagating in different throats. The action for $n$ decoupled branes in the
+relativistic limit is the sum of $n$ copies of the DBI action
+\eqref{eq:DBIaction-dbiintro}. The power spectrum of curvature perturbations is
+enhanced by a factor of $n^{3/2}$ with respect to the single brane case. The value
+of the tensor-scalar ratio will, therefore, be reduced. 
+
 
 We have not yet addressed models with multiple branes but only one effective
-degree of freedom. Multiple M5-branes in M-theory act with an effective single
-degree of freedom but the Lyth bound is now significantly weakened and large
-field ranges are possible \cite{Krause:2007jr}. It is also possible to consider
-the case of $n$ coincident D3-branes in a warped throat \cite{thomasward, hltw,
+degree of freedom in total. Multiple M5-branes in M-theory act with an effective
+single degree of freedom but the Lyth bound is now significantly weakened and large
+field ranges are possible \cite{Krause:2007jr}. 
+Another proposal is that of $n$ coincident D3-branes in a warped throat
+\cite{thomasward, hltw,
 Ward:2007gs}. In Chapter~\ref{ch:multibrane} we investigate this model in both
 the large and small $n$ limits and show how the constraints derived in this
 chapter can be applied.
