Changed figure placement.

--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.38 2009/11/05 18:03:17 ith Exp $
+% $Id: numerical.tex,v 1.39 2009/11/05 18:10:38 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.38 2009/11/05 18:03:17 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.39 2009/11/05 18:10:38 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -844,7 +844,7 @@ parameters turned out to be more accurate than others. The relative error of
 all the following results is not affected by the choice of $\alpha$ so
 we will keep its numerical value fixed throughout.
 
-\begin{figure}
+\begin{figure}[htb]
  \centering
  \includegraphics[width=\textwidth]{numerical/graphs/err-deltak4.pdf}
  \caption[Relative error in the convolution term $\A$]{The relative error in the
@@ -895,7 +895,7 @@ insensitive to further increases in the value of $\Delta k$. (This is not shown 
 the figure.)
 
 
-\begin{figure}
+\begin{figure}[htb]
  \centering
  \includegraphics[width=\textwidth]{numerical/graphs/err-deltak-kmin.pdf}
  % err-deltak-kmin.pdf: 432x324 pixel, 72dpi, 15.24x11.43 cm, bb=
